--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
-  qrscan: ^0.3.1
   permission_handler:
+  flutter_barcode_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
