--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   equatable: ^2.0.0
   http: ^0.12.2
   flutter_easyloading: ^3.0.0
+  flutter_typeahead: ^3.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
