--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   cupertino_icons: ^1.0.1
   permission_handler:
   flutter_barcode_scanner: ^2.0.0
+  flutter_launcher_icons: ^0.8.1
+
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "assets/icons/icon.png"
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +63,7 @@ flutter:
   assets:
     - assets/logos/
     - assets/images/
+    - assets/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
