Mejora observaciones en lista pedidos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   cupertino_icons: ^1.0.1
   permission_handler:
   flutter_barcode_scanner: ^2.0.0
-  flutter_launcher_icons: ^0.8.1
+  flutter_launcher_icons: ^0.9.0
+  highlighter_coachmark: ^0.0.3
 
 flutter_icons:
   android: "launcher_icon"
