--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^6.0.0
+  flutter_bloc: ^7.0.0
   equatable: ^2.0.0
-  http: ^0.12.2
+  http: ^0.13.3
   flutter_easyloading: ^3.0.0
   flutter_typeahead: ^3.1.2
 
@@ -37,12 +37,15 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
   highlighter_coachmark: ^0.0.3
   auto_size_text: ^2.1.0
+  freezed: ^0.14.1+3
+  freezed_annotation: ^0.14.1
 
 flutter_icons:
   android: "launcher_icon"
   image_path: "assets/icons/icon.png"
 
 dev_dependencies:
+  build_runner: ^2.0.2
   flutter_test:
     sdk: flutter
   integration_test:
