--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
   highlighter_coachmark: ^0.0.3
   auto_size_text: ^2.1.0
-  freezed: ^0.14.1+3
+
   freezed_annotation: ^0.14.1
+  json_annotation:
 
 flutter_icons:
   android: "launcher_icon"
@@ -46,6 +47,8 @@ flutter_icons:
 
 dev_dependencies:
   build_runner: ^2.0.2
+  freezed: ^0.14.1+3
+
   flutter_test:
     sdk: flutter
   integration_test:
