--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mindia.almacen_android">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="AlmacenAPP"
         android:icon="@mipmap/launcher_icon">
