--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 
   freezed_annotation: ^0.14.1
   json_annotation:
+  shared_preferences: ^2.0.6
 
 flutter_icons:
   android: "launcher_icon"
